--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "author": "Blackbaud",
   "license": "ISC",
   "dependencies": {
-    "@blackbaud/sky-addin-client": "1.0.1",
-    "@blackbaud/skyux": "2.18.0"
+    "@blackbaud/skyux": "2.18.0",
+    "@blackbaud/sky-addin-client": "^1.0.2",
+    "@blackbaud/skyux-lib-addin-client": "^1.1.1"
   },
   "devDependencies": {
     "@blackbaud/skyux-builder": "1.19.2"
