--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "@blackbaud/skyux": "2.25.0",
     "@blackbaud/sky-addin-client": "1.0.8",
-    "@blackbaud/skyux-lib-addin-client": "^1.1.3"
+    "@blackbaud/skyux-lib-addin-client": "1.1.3"
   },
   "devDependencies": {
     "@blackbaud/skyux-builder": "1.21.0"
